fixed logo sizing on small screens

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -198,9 +198,9 @@ body {
 	@extend .icon-address;
 
 	font-family: "Alfa Slab One", Georgia, serif;
-	font-size: 2.5em;
+	font-size: 2.25em;
 	font-weight: normal;
-	left: -12px;
+	left: -28px;
 	line-height: 1em;
 	margin-bottom: .25em;
 	position: relative;
